# passing-the-time

./: Cargo.toml  README.md  run  sphere.ppm
.devcontainer/: devcontainer.json
exercise/: Cargo.toml
exercise/src/: arrays_and_for_loops.rs  fizzbuss.rs  implicit_conversions.rs  main.rs  methods.rs  overloading.rs  references.rs  slices.rs
me-being-stupid/: Cargo.toml
me-being-stupid/src/: bit.rs  main.rs  packed_bits.rs
outputs/: sphere.ppm
ppm-writer/: Cargo.toml  test1.ppm
ppm-writer/src/: main.rs
ray-tracing-in-one-weekend/: Cargo.toml
ray-tracing-in-one-weekend/src/: material.rs  vec.rs
src/: camera.rs  hit.rs  main.rs  material.rs  ray.rs  sphere.rs  vec.rs
