[package]
name = "ray-tracing-in-one-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"
